--- a/app/src/main/res/layout/fragment_voice_progress_note.xml
+++ b/app/src/main/res/layout/fragment_voice_progress_note.xml
@@ -36,20 +36,17 @@
         android:thicknessRatio="1.9"
         app:cardCornerRadius="3dp">
 
-        <TextView
-            android:id="@+id/result_text"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="bottom"
+            android:id="@+id/result_text"
+            android:layout_alignParentLeft="true"
+            android:background="@android:color/transparent"
+            android:layout_centerVertical="true"
+            android:autoLink="all"
+            android:minLines="1"
+            android:gravity="top|left"
             android:scrollbars="vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:inputType="textMultiLine|textCapSentences"/>
     </androidx.cardview.widget.CardView>
-
-<!--    <Button-->
-<!--        android:id="@+id/recognize_mic"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/searview_id"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:text="Mic" />-->
 </RelativeLayout>
